--- a/style.css
+++ b/style.css
@@ -3,16 +3,6 @@ body {
     padding: 0;
 }
 
-a:hover {
-    color: red;
-    text-decoration-thickness: 3px;
-}
-
-
-article:hover {
-    transform: scale(1.01);
-}
-
 
                             /* ---Meniu Navigatie--- */
 
@@ -23,7 +13,10 @@ article:hover {
 
     height: 110px;
     width: 110px;
-
+    transition: filter 0.2s ease-in-out;
+}
+#logo:hover {
+    filter: brightness(0.8);
 }
                                     
                                     
@@ -32,7 +25,7 @@ nav {
     flex-direction: row;
     align-items: center;
 
-    background-color: #232222;
+    background-color: #19074d; /* culoare mov inchis */
     height: 100px;
 }
 nav ul {
@@ -52,6 +45,12 @@ nav ul li a {
     color: white;
 }
 
+nav ul li a:hover {
+    box-shadow: inset 0 0 0 12px #232599, 0 0 0 12px #232599; 
+    border-radius: 1px;
+    transition: box-shadow 0.2s ease-out;
+}
+
 
 .nav-left {
     margin-left: 40px;
@@ -63,7 +62,7 @@ nav ul li a {
 /* Punctul rosu de live */
 .nav-left li:first-child a::before {
     content: "•";
-    color: rgb(109, 109, 109);
+    color: rgb(255, 0, 0);
     margin-right: 5px;
 }
 
@@ -87,6 +86,7 @@ main {
     left: 43px;
 
     /* background-color: aqua; */
+    text-decoration: none;
 }
 
 #prima-imagine {
@@ -96,25 +96,31 @@ main {
 /* textul la prima stire */
 #primul-text {
     position: relative;
-    bottom: 33px;
+    bottom: 40px;
+    left: 30px;
     
     font-family: Geneva, Tahoma, sans-serif;
     font-size: 2.5rem;
     font-weight:bolder;
 
-    text-align:justify;
-    text-decoration: none;
-
-    padding: 20px;
     
-    color: #9b9fe9;
-    background-color: #1c1e25;
-    width: 400px;
+    color: #19074d;
+    /* background-color: #1c1e25; */
+    width: 380px;
     height: 310px;
-
-    line-height: 50px;
-
+    line-height: 60px;
+    
+    /* border: #232222 4px solid; */
 }
+
+
+
+/* Hover la tot text-ul din pagina */
+.prima-stire:hover #primul-text, aside article a:hover h3, article a:hover p {
+    text-decoration: underline;
+}
+
+
 
 /* textul "de ultima ora" */
 #ultima-ora{
@@ -152,10 +158,7 @@ aside article a {
     color: black;
 
 }
-aside article a:hover {
-    text-decoration: underline;
 
-}
 
 aside article a h3 {
     color: rgb(237, 230, 230);
@@ -319,12 +322,12 @@ header a {
 }
 
 
-                            /* Footer */
+                            /* Footer [needs work]*/
 
 footer {
     margin-top: 100px;
 
-    background-color: #232222;
+    background-color: #19074d;
     color: white; 
     padding: 20px 0;
 
