--- a/style.css
+++ b/style.css
@@ -11,8 +11,8 @@ body {
     left: 45px;
     top: 30px;
 
-    height: 110px;
-    width: 110px;
+    height: 100px;
+    width: 100px;
     transition: filter 0.2s ease-in-out;
 }
 #logo:hover {
@@ -25,19 +25,19 @@ nav {
     flex-direction: row;
     align-items: center;
 
-    background-color: #19074d; /* culoare mov inchis */
-    height: 100px;
+    background-color: #1d0f48; /* culoare mov inchis */
+    height: 80px;
 }
 nav ul {
     list-style: none; /* Elimină punctele de listă */
     display: flex; 
 }
 nav ul li {
-    margin-right: 17px;
+    margin-right: 15px; /*despre noi si contact le impinge*/
 
 }
 nav ul li a {
-    font-family: Verdana, Geneva, sans-serif;
+    font-family:Arial, Helvetica, sans-serif;
     font-weight:bold;
     text-decoration: none;
     font-size: 17px;
@@ -48,7 +48,7 @@ nav ul li a {
 nav ul li a:hover {
     box-shadow: inset 0 0 0 12px #232599, 0 0 0 12px #232599; 
     border-radius: 1px;
-    transition: box-shadow 0.2s ease-out;
+    transition: box-shadow 0.2s ease;
 }
 
 
@@ -73,7 +73,6 @@ nav ul li a:hover {
 main {
     display: flex;
     flex-direction: row;
-    /* background-color: rgb(222, 134, 134); */
 
 }
 
@@ -325,7 +324,7 @@ header a {
                             /* Footer [needs work]*/
 
 footer {
-    margin-top: 100px;
+    margin-top: 60px;
 
     background-color: #19074d;
     color: white; 
@@ -345,16 +344,10 @@ footer {
     flex-direction: column;
     gap: 8px;
 
-    /* nou */
-    background-color: #232222; 
 }
 
 .footer-links a {
     font-weight: 100;
-}
-
-.footer-links a:hover {
-    color: red; 
 }
 
 .footer-content {
